# Simulating-Aid-Delivery-Informed-by-Automated-Planning

./: .gitmodules  README.md
catkin_ws/devel/: .catkin  .rosinstall  setup.sh
catkin_ws/devel/include/amcl/: AMCLConfig.h
catkin_ws/devel/include/base_local_planner/: Position2DInt.h
catkin_ws/devel/include/costmap_2d/: ObstaclePluginConfig.h  VoxelGrid.h  VoxelPluginConfig.h
catkin_ws/devel/include/gazebo_msgs/: ApplyBodyWrenchRequest.h  ApplyBodyWrenchResponse.h  ApplyJointEffortRequest.h  ApplyJointEffortResponse.h  BodyRequestRequest.h  BodyRequestResponse.h  ContactState.h  ContactsState.h  DeleteLightRequest.h  DeleteLightResponse.h  DeleteModelRequest.h  DeleteModelResponse.h  GetJointPropertiesRequest.h  GetJointPropertiesResponse.h  GetLightPropertiesRequest.h  GetLightPropertiesResponse.h  GetLinkPropertiesRequest.h  GetLinkPropertiesResponse.h  GetLinkStateRequest.h  GetLinkStateResponse.h  GetModelPropertiesRequest.h  GetModelPropertiesResponse.h  GetModelStateRequest.h  GetModelStateResponse.h  (+31 more)
catkin_ws/src/prjtdde05/: CMakeLists.txt  prj_prob_and_plan_services
catkin_ws/src/prjtdde05/common/: _problem1vic.pddl  _problem2vic.pddl  _waypoints.txt
catkin_ws/src/prjtdde05/common/ff_planner_files/: domain_turtlebot_demo.pddl  plan.pddl
catkin_ws/src/prjtdde05/common/popf_planner_files/: domain_turtlebot_demo.pddl  plan.pddl  problem1vic.pddl
catkin_ws/src/prjtdde05/launch/: assertTF.launch  autoplanning_ff_planner (copy).launch  autoplanning_ff_planner.launch  autoplanning_popf_planner.launch  fwc.launch  simulation.launch
catkin_ws/src/prjtdde05/mapping/: the_map3.yaml
catkin_ws/src/prjtdde05/src/: enforcer.cpp
(+269 files in other folders)
